web/route/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: route
spec:
  replicas: 1
  selector:
    matchLabels:
      name: route-web
      micro: service
  template:
    metadata:
      labels:
        name: route-web
        micro: service
    spec:
      containers:
        - name: route
          command: [
            "/route-web",
          ]
          image: 10.9.19.140/test/route-web
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: route-port
