web/route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route
  namespace: default
  labels:
    name: route-web
    micro: service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: micro-api
    micro: service
  type: LoadBalancer
